--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-# Dependencies
-node_modules/
-
-# Environment variables
+node_modules
 .env
-.env.local
-.env.*.local
-
-# Build outputs
-dist/
-build/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# System Files
-.DS_Store
-Thumbs.db
-
-# IDEs
-.idea/
-.vscode/
+uploads
